# pass-culture-main

./: .babelrc  .cz.toml  .dockerignore  .editorconfig  .env  .env.development  .env.integration  .env.old  .env.production  .env.staging  .env.testauto  .env.testing  .env.testing.local  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .git-commit-message-template  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitmodules  .jest-polyfill.js  .netlify  .prettierignore  .prettierrc  .prettierrc.json  .pylintrc  .stylelintrc.json  .tyrion-config.json  20180719_090001.pgdump  20180730_080001.pgdump  CONTRIBUTING.md  Dockerfile  Dockerfile.gcp  GLOSSARY.md  Gestion des erreurs Frontend - Propositions techniques.temp.md  Gestion des erreurs Frontend - RFC.temp.md  Gestion des erreurs Frontend - Tickets JIRA.temp.md  (+95 more)
api/: .dockerignore  .env.development  .env.integration  .env.ops  .env.production  .env.rebuild_staging  .env.staging  .env.testauto  .env.testing  .flaskenv  .git-blame-ignore-revs  .gitignore  .pylintrc  .squawk.toml  .test_durations  .tyrion-config.json  AGENTS.md  Dockerfile  README.md  TESTS.md  TODO.md  adr-algolia.md  alembic.ini  alembic_timescaledb.ini  alembic_version_conflict_detection.txt  algolia-query.json  algolia.sh  algolia_client.py  algolia_event_offers.py  algolia_hit_to_csv.jq  clone_user_to_local.sh  create_event.py  db.sh  entrypoint.sh  env.local  fix_offer_extra_data.sh  fix_product_gtl_id_minus_8_chars.sh  gunicorn.conf.py  main.sh  migrate_indexation_queues.py  (+32 more)
api/.circleci/: config.yml
api/documentation/: .firebaserc  .nvmrc  README.md  docusaurus.config.ts  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/etc/: pgcli.ini
api/hooks/: commit-msg  pre-commit  pre-push
api/prof-routes-backoffice/: combined.prof  test_accepte_beneficiary_already_underage.prof  test_accepte_underage_beneficiary_already_beneficiary.prof  test_action_name_depends_on_type.prof  test_active_offers_only.prof  test_add_comment.prof  test_add_existing_user_offerer.prof  test_add_invalid_comment.prof  test_add_new_fraud_review_to_account.prof  test_add_pro_user_choices.prof  test_add_product_to_whitelist_should_set_validation_author.prof  test_add_product_with_already_rejected_offers_to_whitelist[form_data0].prof  test_add_product_with_already_rejected_offers_to_whitelist[form_data1].prof  test_add_user_empty.prof  test_add_user_not_related.prof  test_add_user_offerer_and_validate.prof  test_additional_data_when_reimbursed.prof  test_authorize.prof  test_authorize_with_google_credentials.prof  test_autocomplete_criteria[-expected_texts0].prof  test_autocomplete_criteria[Cinema-expected_texts4].prof  test_autocomplete_criteria[o-expected_texts1].prof  test_autocomplete_criteria[offre-expected_texts2].prof  test_autocomplete_criteria[playlist lecture-expected_texts5].prof  test_autocomplete_criteria[va-expected_texts3].prof  test_autocomplete_offerers[-expected_texts0].prof  test_autocomplete_offerers[1-expected_texts1].prof  test_autocomplete_offerers[100200301-expected_texts7].prof  test_autocomplete_offerers[12-expected_texts2].prof  test_autocomplete_offerers[1234-expected_texts3].prof  test_autocomplete_offerers[123444556-expected_texts5].prof  test_autocomplete_offerers[12345-expected_texts4].prof  test_autocomplete_offerers[789-expected_texts6].prof  test_autocomplete_offerers[cin_xe9 th_xe9_xe2tre-expected_texts10].prof  test_autocomplete_offerers[cin_xe9-expected_texts8].prof  test_autocomplete_offerers[cinema-expected_texts9].prof  test_autocomplete_venues[-expected_texts0].prof  test_autocomplete_venues[1-expected_texts1].prof  test_autocomplete_venues[100200301-expected_texts8].prof  test_autocomplete_venues[12-expected_texts2].prof  (+942 more)
api/prof-routes-not-backoffice/: 0da4cde8.prof  815a266d.prof  e4ef8b25.prof  ea7f9514.prof  expect_a_new_user_session_to_be_recorded.prof  expect_offer_to_be_approved.prof  expect_offer_to_be_pending.prof  should_be_allowed_to_get_banner_when_active.prof  should_catch_error.prof  should_complete_crop_params_when_venue_image_crop_params_is_null.prof  should_complete_crop_params_when_venue_picture_has_incomplete_crop_params.prof  should_contain_all_subscription_steps_for_15yo_user.prof  should_contain_all_subscription_steps_for_18yo_user.prof  should_contain_id_check_in_steps_if_educonnect_done_for_underage.prof  should_contain_identity_check_methods.prof  should_contain_maintenance_page_type_with_dms[15].prof  should_contain_maintenance_page_type_with_dms[16].prof  should_contain_maintenance_page_type_with_dms[17].prof  should_contain_maintenance_page_type_with_dms[18].prof  should_contain_maintenance_page_type_without_dms[15].prof  should_contain_maintenance_page_type_without_dms[16].prof  should_contain_maintenance_page_type_without_dms[17].prof  should_contain_maintenance_page_type_without_dms[18].prof  should_display_cultural_survey_if_beneficiary.prof  should_edit_stock_when_event_expired.prof  should_extend_refresh_token_lifetime_on_email_validation_when_device_is_trusted.prof  should_extend_refresh_token_lifetime_when_logging_in_with_a_trusted_device.prof  should_fail_when_externalTicketOfficeUrl_has_no_host.prof  should_fail_when_externalTicketOfficeUrl_has_no_scheme.prof  should_fail_when_url_has_no_host.prof  should_fail_when_url_has_no_scheme.prof  should_filter_by_venue_when_user_is_admin_and_request_specific_venue_with_no_rights_on_it.prof  should_filter_by_venue_when_user_is_not_admin_and_request_specific_venue_with_rights_on_it.prof  should_filter_offers_by_given_category_id.prof  should_filter_offers_by_given_creation_mode.prof  should_filter_offers_by_given_offerer_id.prof  should_filter_offers_by_given_status.prof  should_filter_offers_by_given_venue_id.prof  should_get_17_18_transition_id_check_done_banner.prof  should_get_17_18_transition_id_check_todo_banner.prof  (+1506 more)
api/prof-test-ignore-booking-offers-finance/: 113ea356.prof  610b9936.prof  7f2f14b1.prof  (+1602 more)
proxy/: Dockerfile  README.md  entrypoint.sh  local_test_env_file  pyproject.toml
(+236017 files in other folders)
